<resources>
    <string name="app_name">Example Arch Component Room</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="unknown">Unknown</string>
    <string name="divider_vertical">|</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_data">Add Data</string>
    <string name="student_birthday">Student Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_address">Student Address</string>
    <string name="save">Save</string>
</resources>
