<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_layout_container_item_data_student"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_student_id_item_data_student"
        android:text="@string/unknown"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_student_name_item_data_student"
        android:text="@string/unknown"
        android:maxLines="1"
        android:layout_below="@+id/text_view_student_id_item_data_student"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_divider_vertical"
        android:text="@string/divider_vertical"
        android:layout_below="@+id/text_view_student_id_item_data_student"
        android:layout_toRightOf="@+id/text_view_student_name_item_data_student"
        android:layout_toEndOf="@+id/text_view_student_name_item_data_student"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_student_address_item_data_student"
        android:layout_below="@+id/text_view_student_id_item_data_student"
        android:layout_toRightOf="@+id/text_view_divider_vertical"
        android:layout_toEndOf="@+id/text_view_divider_vertical"
        android:text="@string/unknown"
        android:maxLines="1"
        android:layout_marginBottom="13dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete_student_item_data_student"
        android:text="@string/delete"
        android:layout_below="@+id/text_view_student_address_item_data_student"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:background="@drawable/background_corners_button_transparant_dark"
        android:paddingTop="13dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="13dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_edit_student_item_data_student"
        android:text="@string/edit"
        android:layout_below="@+id/text_view_student_address_item_data_student"
        android:background="@drawable/background_corners_button_transparant_dark"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:textAllCaps="false"
        android:textColor="#8BC34A"
        android:layout_toRightOf="@+id/button_delete_student_item_data_student"
        android:layout_toEndOf="@+id/button_delete_student_item_data_student"
        android:paddingTop="13dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="13dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />

</RelativeLayout>